home/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jellyfin
  name: jellyfin
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: http
    name: http
  - port: 443
    targetPort: https
    name: https
  - port: 1900
    targetPort: dlna
    name: dlna
  - port: 7359
    protocol: UDP
    targetPort: clientdiscovery
    name: clientdiscovery
  selector:
    app.kubernetes.io/name: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        node-role.kubernetes.io/nas: "nas"
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.10.7
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
          ports:
            - containerPort: 8096
              name: http
            - containerPort: 8920
              name: https
            - containerPort: 1900
              name: dlna
            - containerPort: 7359
              protocol: UDP
              name: clientdiscovery
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            # LIBRARY
            - mountPath: /media
              name: jellyfin-video
            - mountPath: /library
              name: media-library
            # TEMP
            - mountPath: /cache
              name: jellyfin-cache
            - mountPath: /transcodes
              name: jellyfin-transcodes
      volumes:
        # LIBRARY
        - name: jellyfin-video
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: media-library
          persistentVolumeClaim:
            claimName: media-library
        # CONFIG
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        # TEMP
        - name: jellyfin-cache
          emptyDir: {}
        - name: jellyfin-transcodes
          emptyDir: {}
