home/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Video streaming
    gethomepage.dev/group: Home
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/widget.type: "jellyfin"
    gethomepage.dev/widget.url: "http://jellyfin:443"
    gethomepage.dev/widget.key: "<path:kv/data/homepage#jellyfin-key>"
    gethomepage.dev/widget.enableBlocks: "true"
    gethomepage.dev/widget.enableNowPlaying: "false"
    gethomepage.dev/widget.enableUser: "true"
    gethomepage.dev/widget.showEpisodeNumber: "true"
    gethomepage.dev/widget.expandOneStreamToTwoRows: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: video.<homelab-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellyfin
              port:
                name: https
  tls:
    - hosts:
      - video.<homelab-domain>
      secretName: "video.<homelab-domain>-cert"
